[gd_scene load_steps=13 format=3 uid="uid://b1acnbgqgmrd5"]

[ext_resource type="PhysicsMaterial" uid="uid://ccee2f4386ohx" path="res://tres/player_rb_physics.tres" id="1_35slv"]
[ext_resource type="Script" uid="uid://dqujq5ra1ylw8" path="res://scripts/player_rb.gd" id="1_kl7y2"]
[ext_resource type="Material" uid="uid://baal84wepyfnc" path="res://tres/player_rb.tres" id="2_l4aw4"]
[ext_resource type="Material" uid="uid://dacfhsljtbygc" path="res://tres/ground_indicator.tres" id="3_35slv"]
[ext_resource type="Script" uid="uid://doge26hy125f3" path="res://scripts/movement_handler.gd" id="5_1k5lo"]
[ext_resource type="Script" uid="uid://y6a7neyf4vsf" path="res://scripts/camera_handler.gd" id="5_3k3na"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c7ipo"]
margin = 0.1
radius = 0.3
height = 1.75

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rj34p"]
material = ExtResource("2_l4aw4")
radius = 0.3
height = 1.75

[sub_resource type="CylinderMesh" id="CylinderMesh_35slv"]
material = ExtResource("3_35slv")
top_radius = 0.0
bottom_radius = 0.15
height = 1.25

[sub_resource type="SphereShape3D" id="SphereShape3D_rj34p"]

[sub_resource type="SphereShape3D" id="SphereShape3D_kl7y2"]
radius = 0.25

[sub_resource type="SphereMesh" id="SphereMesh_rj34p"]
material = ExtResource("3_35slv")
radius = 0.25
height = 0.5

[node name="PlayerRB" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
mass = 20.0
physics_material_override = ExtResource("1_35slv")
script = ExtResource("1_kl7y2")

[node name="Collision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_c7ipo")

[node name="Mesh" type="MeshInstance3D" parent="Collision"]
unique_name_in_owner = true
mesh = SubResource("CapsuleMesh_rj34p")
skeleton = NodePath("../..")

[node name="PointerMesh" type="MeshInstance3D" parent="Collision"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, 0.3)
mesh = SubResource("CylinderMesh_35slv")

[node name="CameraHandler" type="Node3D" parent="."]
script = ExtResource("5_3k3na")

[node name="CameraPivot" type="Node3D" parent="CameraHandler"]
unique_name_in_owner = true
transform = Transform3D(-1, 2.26267e-08, -8.44439e-08, 0, 0.965926, 0.258819, 8.74228e-08, 0.258819, -0.965926, 0, 1.6, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraHandler/CameraPivot"]
collision_mask = 2
shape = SubResource("SphereShape3D_rj34p")
spring_length = 8.0
margin = 0.05

[node name="Camera" type="Camera3D" parent="CameraHandler/CameraPivot/SpringArm3D"]
unique_name_in_owner = true

[node name="MovementHandler" type="Node3D" parent="."]
script = ExtResource("5_1k5lo")

[node name="GroundDetector" type="Area3D" parent="MovementHandler"]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 4

[node name="GroundCollision" type="CollisionShape3D" parent="MovementHandler/GroundDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("SphereShape3D_kl7y2")

[node name="GroundDetectorMesh" type="MeshInstance3D" parent="MovementHandler/GroundDetector/GroundCollision"]
unique_name_in_owner = true
mesh = SubResource("SphereMesh_rj34p")

[node name="JumpTimer" type="Timer" parent="MovementHandler"]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true
